--- a/Routines/xpipe-no-restore-mysql/src/Dockerfile
+++ b/Routines/xpipe-no-restore-mysql/src/Dockerfile
@@ -1,19 +1,27 @@
-FROM sindriainc/postgres:3.0.0-12.3
+ARG ARCH
+ARG TAG_SUFFIX
+FROM --platform=linux/${ARCH} mysql:${TAG_SUFFIX}
 
 ARG TAG_VERSION
+ARG TAG_SUFFIX
 ARG HOST_USER_UID
 ARG TIMEZONE
+ARG AWSCLI_ARCH
+
+LABEL org.opencontainers.image.authors="Sindria Inc. <info@sindria.org>"
 
 LABEL \
-	name="postgres-restore" \
-	image="sindriaproject/postgres-restore" \
+	name="xpipe-no-restore-mysql" \
+	image="sindriainc/xpipe-no-restore-mysql" \
 	tag="${TAG_VERSION}" \
 	vendor="sindria"
 
 ENV AWSCLI_VERSION "1.16.268"
 ENV PATH "/root/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/sindria/.local/bin"
 ENV TZ=${TIMEZONE}
-ENV SINDRIA_USER="postgres"
+ENV SINDRIA_USER="mysql"
+
+USER root
 
 # Setting app user, timezone and permissions
 RUN mkdir -p /var/www && \
@@ -24,31 +32,36 @@ RUN mkdir -p /var/www && \
 
 WORKDIR /var/www/app
 
-# Update and install packages
-RUN apk update && \
-    apk add \
+# Update packages
+RUN microdnf upgrade \
+  --refresh \
+  --best \
+  --nodocs \
+  --noplugins \
+  --setopt=install_weak_deps=0
+
+# Install packages
+RUN microdnf install -y \
     bash \
-    openssh-client \
     curl \
     git \
     rsync \
-    python3 \
-    python3-dev \
-    py-pip \
-    libffi-dev \
-    openssl-dev \
     gcc \
-    libc-dev \
-    make \
-    build-base && \
-    rm -rf /var/cache/apk/*
+    unzip \
+    make && \
+    microdnf clean all
 
 # Install awscli
-RUN pip3 install urllib3 --upgrade --user && \
-    pip3 install six --upgrade --user && \
-    pip3 install awscli --upgrade --user
-
-USER root
+RUN cd /tmp && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-${AWSCLI_ARCH}.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install && \
+    rm -Rf awscliv2.zip && \
+    rm -Rf aws && \
+    rm -rf /usr/local/aws-cli/v2/*/dist/aws_completer && \
+    rm -rf /usr/local/aws-cli/v2/*/dist/awscli/data/ac.index && \
+    rm -rf /usr/local/aws-cli/v2/*/dist/awscli/examples && \
+    /usr/local/bin/aws --version
 
 # Add and setup entrypoint
 COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
